syntax = "proto3";

package model;

// User represents a registered user.
message User {
    // Id is a unique ID for this user.
    string id = 1;
    // Name is the name of this user.
    string name = 2;
    // Password is the user's hashed password.
    bytes password = 3;
}

// Post is a post from a user.
message Post {
    // Id is the unique ID of this post.
    uint64 id = 1;
    // UserId is the ID of the user who posted this post.
    string user_id = 2;
    // Content is the content of the post.
    PostContent content = 3;
}

// PostContent is the content of a post.
message PostContent {
    // Text is the text of the post.
    string text = 1;
    // Attachments are optional attachment to the post.
    repeated Attachment attachments = 2;
}

// Attachment is a non-text attachment to a post.
message Attachment {
    oneof attachment {
        string url = 1;
        File file = 2;
    }
}

// File is a blob.
message File {
    // MimeType is the MIME type of the file.
    string mime_type = 1;
    // Content is the contents of the file.
    bytes content = 2;
}
